--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 /* Variables */
 
 :root {
-  --basic-white: #ffffff;
+  --basic-white: #FFFFFF;
   --basic-lighter-grey: #EAEAEA;
   --basic-light-grey: #E5E5E5;
   --basic-grey: #C5C5C5;
@@ -27,7 +27,6 @@
   --basic-black: #000000;
 
   --basic-transparent-white: rgba(255, 255, 255, 0.5);
-  --basic-transparent-lightgrey: rgba(0, 0, 0, 0.0001);
   --basic-transparent-grey: rgba(0, 0, 0, 0.24);
 
   --special-dark-yellow: #FFBF47;
@@ -36,4 +35,26 @@
   --special-green: #8ED78F;
   --special-darker-greyblue: #212A3A;
   --special-extradark-greyblue: #161D29;
+}
+
+/* Global */
+
+body {
+  min-width: 960px;
+  margin: 0;
+  padding: 0;
+  font-family: "PT Sans", Arial, sans-serif;
+  font-size: 13px;
+  font-weight: 400;
+  color: var(--basic-black);
+  background-color: var(--basic-white);
+}
+
+a {
+  text-decoration: none;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
 }
