--- a/css/style.css
+++ b/css/style.css
@@ -589,6 +589,19 @@ img {
   border: 1px solid var(--basic-red);
 }
 
+/* Catalog basic information */
+
+.basic-information {
+  background-color: var(--basic-lighter-greyblue);
+}
+
+.basic-information-title {
+  font-family: "Cuprum", Arial, sans-serif;
+  font-size: 30px;
+  line-height: 30px;
+  text-transform: uppercase;
+}
+
 /* Main footer */
 
 .main-footer {
