--- a/css/style.css
+++ b/css/style.css
@@ -67,11 +67,32 @@ img {
   height: auto;
 }
 
+/* Grid */
+
+.page {
+  height: 100%;
+}
+
+.page-body {
+  min-height: 100%;
+  display: grid;
+  grid-template-rows: min-content 1fr min-content;
+  align-content: start;
+}
+
+/* Container */
+
+.container {
+  width: 940px;
+  margin: 0 auto;
+}
+
 /* Header */
 
 .main-header {
   background-color: var(--basic-extralight-greyblue);
   font-family: "Cuprum", Arial, sans-serif;
+  margin-bottom: 60px;
 }
 
 .main-header-logo {
@@ -82,10 +103,19 @@ img {
   background-color: var(--basic-darker-red);
 }
 
-.main-header-about i {
+.header-info-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  column-gap: 20px;
+  margin-bottom: 30px;
+}
+
+.main-header-about p {
+  font-style: italic;
   font-size: 16px;
   line-height: 23px;
   color: var(--basic-red);
+  margin: 0 30px;
 }
 
 .main-header-contacts {
@@ -103,6 +133,10 @@ img {
   line-height: 30px;
   color: var(--basic-red);
   border: 3px solid var(--basic-white);
+}
+
+.main-header-account {
+  justify-self: end;
 }
 
 .authorization-container a {
@@ -153,17 +187,26 @@ img {
 
 .main-navigation {
   background-color: var(--basic-dark-greyblue);
+  margin-bottom: 60px;
 }
 
-.user-navigation {
+.main-header-bar {
   background-color: var(--basic-darker-greyblue);
+}
+
+.user-navigation-container {
+  display: grid;
+  grid-template-columns: 220px 1fr max-content max-content max-content;
+  width: 940px;
+  margin: 0 auto;
+  padding: 0 10px;
 }
 
 .page-navigation {
   list-style: none;
 }
 
-.user-navigation a,
+.user-navigation-container a,
 .page-navigation a {
   font-size: 18px;
   color: var(--basic-white);
@@ -216,8 +259,17 @@ img {
 }
 /* Offers */
 
+.offers {
+  margin-bottom: 60px;
+}
+
 .offers-list {
   list-style: none;
+  padding: 0;
+  display: grid;
+  gap: 20px;
+  grid-template-columns: 300px 300px 300px;
+  grid-template-rows: 123px 123px 123px;
 }
 
 .offer-item {
@@ -265,10 +317,32 @@ img {
 /* Offers slider */
 
 .offers-slider {
+  grid-column-start: 1;
+  grid-column-end: 3;
+  grid-row-start: 2;
+  grid-row-end: 4;
+}
+
+.offers-slider-content {
+  height: 266px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
   background-color: var(--basic-grey);
 }
 
+.offers-slider-image {
+  grid-column-start: 1;
+  grid-column-end: 3;
+  grid-row-start: 1;
+  grid-row-end: 3;
+}
+
 .offers-slider-title {
+  grid-column-start: 1;
+  grid-column-end: 3;
+  grid-row-start: 1;
+  grid-row-end: 2;
   font-family: "Cuprum", Arial, sans-serif;
   color: var(--basic-white);
   background-color: var(--basic-transparent-black);
