Добавлена двухколоночная грид-сетка для секций "О компании" и "Контакты"

--- a/css/style.css
+++ b/css/style.css
@@ -528,7 +528,7 @@ img {
 
 .services {
   background-color: var(--basic-extralight-greyblue);
-  margin-bottom: 70px;
+  margin-bottom: 50px;
 }
 
 .services-grid {
@@ -536,13 +536,12 @@ img {
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr;
   column-gap: 20px;
-  row-gap: 60px;
+  row-gap: 40px;
 }
 
 .services-about {
   grid-column-start: 1;
   grid-column-end: 3;
-  padding-top: 65px;
 }
 
 .services-about h2 {
@@ -551,7 +550,6 @@ img {
   font-size: 30px;
   line-height: 30px;
   text-transform: uppercase;
-  margin: 0;
 }
 
 .services-list {
@@ -593,6 +591,13 @@ img {
 }
 
 /* Company & contacts */
+
+.index-columns {
+  display: grid;
+  grid-template-columns: 1fr 300px;
+  column-gap: 180px;
+  margin-bottom: 40px;
+}
 
 .index-columns h2 {
   font-family: "Cuprum", Arial, sans-serif;
