--- a/css/style.css
+++ b/css/style.css
@@ -596,7 +596,7 @@ img {
   display: grid;
   grid-template-columns: 1fr 300px;
   column-gap: 180px;
-  margin-bottom: 40px;
+  margin-bottom: 70px;
 }
 
 .index-columns h2 {
@@ -752,8 +752,24 @@ img {
   background-color: var(--basic-dark-greyblue);
 }
 
+.footer-info-grid {
+  display: grid;
+  grid-template-columns: 320px 1fr;
+  grid-template-rows: 1fr 1fr;
+}
+
+.footer-contacts {
+  grid-row-start: 1;
+  grid-row-end: 3;
+}
+
 .footer-phone {
   color: inherit;
+}
+
+.footer-navigation,
+.footer-promo {
+  justify-self: end;
 }
 
 .footer-navigation-links,
@@ -784,14 +800,23 @@ img {
 /* Footer copyright */
 
 .footer-copyright-container {
+  padding: 30px 0;
   font-size: 16px;
   line-height: 18px;
   color: var(--basic-white);
   background-color: var(--basic-darker-greyblue);
 }
 
+.footer-copyright-grid {
+  display: grid;
+  grid-template-columns: max-content 1fr min-content min-content;
+  column-gap: 50px;
+}
+
 .footer-social {
   text-align: center;
+  width: 134px;
+  justify-self: center;
 }
 
 .footer-social ul {
