--- a/css/style.css
+++ b/css/style.css
@@ -449,9 +449,22 @@ img {
 }
 
 .popular-brand-item {
-  display: flex;
+  /* display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: center; */
+}
+
+.popular-brand-link {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+
+.popular-brand-logo {
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .popular-item-title,
