--- a/css/style.css
+++ b/css/style.css
@@ -627,7 +627,20 @@ img {
 
 /* Inner page */
 
-.page-title {
+.inner-page .main-header {
+  margin-bottom: 20px;
+}
+
+.catalog-grid {
+  display: grid;
+  grid-template-columns: 220px 1fr;
+  align-content: start;
+  gap: 20px;
+}
+
+.page-catalog .page-title {
+  grid-column: 1 / -1;
+  margin: 0;
   font-family: "Cuprum", Arial, sans-serif;
   font-weight: 400;
   font-size: 30px;
@@ -637,9 +650,24 @@ img {
   background-color: var(--basic-lighter-greyblue);
 }
 
+.page-catalog .catalog {
+  grid-column-start: 2;
+  grid-column-end: 3;
+}
+
+.catalog-list {
+  display: grid;
+  grid-template-columns: 220px 220px 220px;
+  gap: 20px;
+  margin-bottom: 60px;
+}
+
 /* Breadcrumbs */
 
 .breadcrumbs {
+  grid-column: 1 / -1;
+  margin: 0;
+  padding: 0;
   list-style: none;
   line-height: 18px;
   text-transform: uppercase;
@@ -709,6 +737,8 @@ img {
 
 .pagination-list {
   list-style: none;
+  padding: 0;
+  margin-top: 30px;
 }
 
 .pagination-item a {
