Заголовки секций с популярными товарами и популярными производителями переставлены на флексы
Здесь у меня есть вопросы по макету, связанные с отступами.

1. Я убрала внешние отступы у заголовка и добавила внутренние отступы самому контейнеру. Имеет ли смысл так делать?

2. Если смотреть по макету, то получается, что отступ слева у обоих заголовков будет одинаковый (30 пикселей), отступ сверху у обоих - 25 пикселей (измеряла по кнопке, потому что она больше по высоте, чем текст), отступ снизу у обоих - 26 пикселей. Прежде всего, стоит ли закрыть глаза на эту разницу в один пиксель или нет? Я пока поставила 25 пикселей, если что, потом поправлю.
И самое интересное: расстояние до кнопки (т.е., получается, отступ справа у контейнера) у заголовка популярных товаров составляет 14 пикселей, а у заголовка популярных производителей - 19 пикселей. Может ли это быть ошибка в макете? Ведь визуально они кажутся одинаковыми, а при измерении - разные. Как поступить в данной ситуации? Нужно ли четко следовать макету и сделать разные отступы или можно выбрать какую-то одну величину и оставить только ее? Пока я поставила средний отступ в 15 пикселей для обоих заголовков.

--- a/css/style.css
+++ b/css/style.css
@@ -420,11 +420,14 @@ img {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 25px 15px 25px 30px;
   background-color: var(--basic-lighter-yellow);
 }
 
 .popular-items-container h2,
 .popular-brands-container h2 {
+  margin: 0;
+  max-width: 670px;
   font-family: "Cuprum", Arial, sans-serif;
   font-weight: 400;
   font-size: 30px;
