--- a/css/style.css
+++ b/css/style.css
@@ -847,6 +847,24 @@ img {
 .footer-navigation-links,
 .footer-promo-links {
   list-style: none;
+  padding: 0;
+  text-align: right;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+}
+
+.footer-navigation-links {
+  width: 600px;
+}
+
+.footer-promo-links {
+  width: 585px;
+}
+
+.footer-navigation-links li,
+.footer-promo-links li {
+  flex-grow: 1;
 }
 
 .footer-navigation-links a {
