--- a/css/style.css
+++ b/css/style.css
@@ -104,10 +104,16 @@ img {
   background-color: var(--basic-darker-red);
 }
 
-.header-info-grid {
+/* .header-info-grid {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   column-gap: 20px;
+  margin-bottom: 30px;
+} */
+
+.header-info {
+  display: flex;
+  justify-content: space-between;
   margin-bottom: 30px;
 }
 
