--- a/css/style.css
+++ b/css/style.css
@@ -104,12 +104,12 @@ img {
   background-color: var(--basic-darker-red);
 }
 
-/* .header-info-grid {
+.header-info-grid {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   column-gap: 20px;
   margin-bottom: 30px;
-} */
+}
 
 .header-info {
   display: flex;
@@ -126,8 +126,11 @@ img {
 }
 
 .main-header-contacts {
+  width: 270px;
   text-align: center;
-  justify-self: center;
+  justify-self: flex-start;
+  display: flex;
+  flex-direction: column;
 }
 
 .main-header-contacts-address {
@@ -139,6 +142,7 @@ img {
   font-weight: 700;
   font-size: 21px;
   line-height: 30px;
+  padding: 5px 0;
   color: var(--basic-red);
   border: 3px solid var(--basic-white);
 }
@@ -155,7 +159,7 @@ img {
 .authorization-container a {
   flex-grow: 1;
   text-align: center;
-  padding: 14px;
+  padding: 12px;
   font-size: 21px;
   line-height: 21px;
   color: var(--basic-black);
@@ -175,8 +179,13 @@ img {
   margin-right: 10px;
 }
 
+.profile-container {
+  width: 299px;
+}
+
 .profile-links {
   list-style: none;
+  padding: 0;
   font-size: 16px;
   line-height: 18px;
 }
@@ -194,6 +203,9 @@ img {
 }
 
 .user-container {
+  display: flex;
+  justify-content: space-around;
+  padding: 12px;
   background-color: var(--basic-white);
 }
 
