--- a/css/style.css
+++ b/css/style.css
@@ -92,7 +92,7 @@ img {
 .main-header {
   background-color: var(--basic-extralight-greyblue);
   font-family: "Cuprum", Arial, sans-serif;
-  margin-bottom: 60px;
+  margin-bottom: 59px;
 }
 
 .main-header-logo {
@@ -108,7 +108,7 @@ img {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   column-gap: 20px;
-  margin-bottom: 30px;
+  margin-bottom: 40px;
 }
 
 .header-info {
@@ -135,6 +135,8 @@ img {
 
 .main-header-contacts-address {
   font-size: 14px;
+  margin: 0;
+  margin-top: 3px;
   color: var(--basic-dark-greyblue);
 }
 
@@ -262,7 +264,7 @@ img {
 
 .page-navigation a {
   display: block;
-  padding: 18px 20px;
+  padding: 16px 20px 20px;
 }
 
 .page-navigation a:hover,
@@ -449,7 +451,7 @@ img {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 25px 15px 25px 30px;
+  padding: 25px 19px 26px 28px;
   background-color: var(--basic-lighter-yellow);
 }
 
@@ -621,7 +623,7 @@ img {
 
 .services {
   background-color: var(--basic-extralight-greyblue);
-  margin-bottom: 50px;
+  margin-bottom: 70px;
 }
 
 .services-grid {
@@ -643,6 +645,8 @@ img {
   font-size: 30px;
   line-height: 30px;
   text-transform: uppercase;
+  margin-top: 64px;
+  margin-bottom: 25px;
 }
 
 .services-list {
@@ -698,6 +702,8 @@ img {
   font-size: 30px;
   line-height: 30px;
   text-transform: uppercase;
+  margin: 0;
+  margin-bottom: 24px;
 }
 
 .transport-company-item {
@@ -708,7 +714,7 @@ img {
 /* Inner page */
 
 .inner-page .main-header {
-  margin-bottom: 20px;
+  margin-bottom: 21px;
 }
 
 .catalog-grid {
@@ -721,6 +727,7 @@ img {
 .page-catalog .page-title {
   grid-column: 1 / -1;
   margin: 0;
+  padding: 29px 29px 30px;
   font-family: "Cuprum", Arial, sans-serif;
   font-weight: 400;
   font-size: 30px;
@@ -765,23 +772,43 @@ img {
   line-height: 18px;
   text-transform: uppercase;
   background-color: var(--basic-light-yellow);
+  margin: 0;
+  padding: 10px 18px;
 }
 
 /* Sort */
 
 .sort {
+  padding: 10px 18px;
   background-color: var(--basic-light-yellow);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .sort-title {
+  display: inline;
+  margin: 0;
   font-weight: 400;
   font-size: 13px;
   line-height: 18px;
   text-transform: uppercase;
 }
 
-.sort-links {
+.sort-links-container {
+  line-height: 18px;
+  display: flex;
+  justify-content: space-between;
+  width: 443px;
+}
+
+.sort-links,
+.sort-links-arrows {
   list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  justify-content: space-between;
 }
 
 .sort-link {
@@ -850,6 +877,7 @@ img {
 /* Catalog basic information */
 
 .basic-information {
+  padding-bottom: 68px;
   background-color: var(--basic-lighter-greyblue);
 }
 
@@ -858,6 +886,13 @@ img {
   font-size: 30px;
   line-height: 30px;
   text-transform: uppercase;
+  margin: 0;
+  margin-top: 64px;
+  margin-bottom: 25px;
+}
+
+.basic-information-description {
+  margin: 0;
 }
 
 /* Main footer */
@@ -879,6 +914,7 @@ img {
   display: grid;
   grid-template-columns: 320px 1fr;
   grid-template-rows: 1fr 1fr;
+  padding-bottom: 54px;
 }
 
 .footer-contacts {
