--- a/css/style.css
+++ b/css/style.css
@@ -108,11 +108,11 @@ img {
   margin-bottom: 59px;
 }
 
+/* Header navigation -> User navigation */
+
 .main-header-logo {
-  position: absolute;
   width: 220px;
   height: 47px;
-  text-align: center;
   background-color: var(--basic-red);
   box-shadow: inset 0 -5px 0 var(--basic-transparent-light-black);
 }
@@ -125,6 +125,167 @@ img {
   padding-top: 12px;
   padding-bottom: 17px;
 }
+
+/* Search */
+
+.search-form {
+  position: relative;
+}
+
+.search-form-icon {
+  position: absolute;
+  top: 12px;
+  left: 17px;
+  opacity: 0.3;
+}
+
+.search-form-input:hover + .search-form-icon {
+  opacity: 1;
+}
+
+.search-form-input {
+  width: 100%;
+  font-size: 18px;
+  line-height: 24px;
+  padding-top: 9px;
+  padding-right: 17px;
+  padding-bottom: 9px;
+  padding-left: 42px;
+  border: none;
+  color: var(--basic-white);
+  background-color: transparent;
+}
+
+.search-form-input::-webkit-input-placeholder {
+	color: var(--basic-white);
+}
+
+.search-form-input::-moz-placeholder {
+	color: var(--basic-white);
+	opacity: 1;
+}
+
+.search-form-input::placeholder {
+  color: var(--basic-white);
+}
+
+.search-form-input:focus {
+  outline: none;
+  color: var(--basic-black);
+  background-color: var(--basic-white);
+}
+
+.search-form-input:focus + .search-form-icon {
+  opacity: 1;
+}
+
+.search-form-input:focus + .search-form-icon path {
+  fill: var(--basic-red);
+}
+
+.user-navigation-grid {
+  display: grid;
+  grid-template-rows: 42px;
+  grid-template-columns: 220px 1fr 150px 150px 150px;
+  width: 940px;
+  margin: 0 auto;
+  margin-bottom: 46px;
+}
+
+/* .user-navigation {
+  position: relative;
+  width: 940px;
+  min-height: 42px;
+  margin: 0 auto;
+  margin-bottom: 46px;
+  display: flex;
+} */
+
+.user-navigation-grid a,
+.page-navigation a {
+  display: block;
+  text-align: center;
+  font-size: 18px;
+  color: var(--basic-white);
+}
+
+.user-navigation-grid a:not(.main-header-logo) {
+  padding-top: 9px;
+  padding-bottom: 9px;
+  padding-right: 16px;
+}
+
+.order-link {
+  padding-left: 19px;
+  background-color: var(--basic-green);
+}
+
+.order-link:hover,
+.order-link:focus {
+  background-color: var(--basic-light-green);
+}
+
+.bookmark-link,
+.cart-link {
+  position: relative;
+  padding-left: 30px;
+}
+
+.bookmark-link::before {
+  content: "";
+  position: absolute;
+  top: 13px;
+  left: 20px;
+  width: 14px;
+  height: 16px;
+  background-image: url("../img/icon-bookmark.svg");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  opacity: 0.3;
+}
+
+.cart-link::before {
+  content: "";
+  position: absolute;
+  top: 13px;
+  left: 20px;
+  width: 15px;
+  height: 15px;
+  background-image: url("../img/icon-cart.svg");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  opacity: 0.3;
+}
+
+.bookmark-link:hover::before,
+.bookmark-link:focus::before,
+.cart-link:hover::before,
+.cart-link:focus::before {
+  opacity: 1;
+}
+
+.bookmark-link:active,
+.cart-link:active,
+.order-link:active {
+  color: var(--basic-transparent-white);
+}
+
+.bookmark-link:active,
+.cart-link:active {
+  background-color: var(--special-extradark-greyblue);
+}
+
+.bookmark-link:active::before,
+.cart-link:active::before {
+  opacity: 0.3;
+}
+
+.cart-full,
+.bookmark-full {
+  background-color: var(--basic-red);
+}
+
+/* Header middle */
 
 .header-info-grid {
   display: grid;
@@ -239,7 +400,7 @@ img {
   color: var(--basic-black);
 }
 
-/* Header navigation */
+/* Header navigation -> Page navigation */
 
 .main-navigation {
   margin-bottom: 60px;
@@ -251,23 +412,6 @@ img {
   background-color: var(--basic-darker-greyblue);
 }
 
-/* .user-navigation-grid {
-  display: grid;
-  grid-template-columns: 220px 1fr max-content max-content max-content;
-  width: 940px;
-  margin: 0 auto;
-  padding: 0 10px;
-} */
-
-.user-navigation {
-  position: relative;
-  width: 940px;
-  margin: 0 auto;
-  display: flex;
-  justify-content: space-between;
-  min-height: 42px;
-}
-
 .page-navigation {
   list-style: none;
   padding: 0 20px;
@@ -275,19 +419,11 @@ img {
   flex-wrap: wrap;
 }
 
-.user-navigation a,
-.page-navigation a {
-  font-size: 18px;
-  color: var(--basic-white);
-}
-
 .page-navigation li {
-  text-align: center;
   flex-grow: 1;
 }
 
 .page-navigation a {
-  display: block;
   padding: 16px 20px 20px;
 }
 
@@ -299,30 +435,6 @@ img {
 .page-navigation a:active {
   background-color: var(--basic-extradark-greyblue);
   color: var(--basic-transparent-white);
-}
-
-.order-link {
-  background-color: var(--basic-green);
-}
-
-.order-link:hover,
-.order-link:focus {
-  background-color: var(--basic-light-green);
-}
-
-.bookmark-link:active,
-.cart-link:active,
-.order-link:active {
-  color: var(--basic-transparent-white);
-}
-
-.bookmark-link:active {
-  background-color: var(--special-extradark-greyblue);
-}
-
-.cart-full,
-.bookmark-full {
-  background-color: var(--basic-red);
 }
 
 /* Tag */
